--- a/kuku_kube.scss
+++ b/kuku_kube.scss
@@ -82,7 +82,7 @@ $totalCubs: 0;
 .finish, .cube {
 	position: absolute;
 	box-sizing: border-box;
-	border: 3px solid white;
+	box-shadow: inset 0 0 0 3px white;
 	opacity: 0;
 	pointer-events: none;
 	-webkit-appearance: none; // Prevent the outline
